# analytics-metrics-api

./: .gitignore  METRICS.ja.md  METRICS.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/clean/: events.parquet  job_runs.parquet  users.parquet
docs/: development-highlights.ja.md
scripts/: generate_sample.py
sql/debug/: conversion_rate_window.sql  dau_window_by_country.sql  dau_window_by_day.sql  dau_window_by_plan.sql  new_users_window.sql  users_parquet_override_debug.sql
sql/debug/job/: job_runs_overview_by_job.sql  job_runs_window.sql  job_setup.sql  job_summary_by_name.sql
sql/debug/job/cli/: run_job_runs_overview_by_job.duckdb  run_job_runs_window.duckdb  run_job_summary_by_name_csv.duckdb  run_job_summary_by_name_line.duckdb
src/app/: __init__.py  jobs_catalog.py  main.py  metrics_catalog.py  models.py  synth.py  warehouse.py
src/app/static/: app.js  index.html  styles.css
tests/: conftest.py  test_entities.py  test_health.py  test_jobs_endpoints.py  test_metrics_known_value.py  test_metrics_list.py  test_root_page.py
tests/golden/: dau_by_day_rows.json  params.json  user_42.json
tools/: regenerate_golden.py  write_golden_params.py
