[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-metrics-api"
version = "0.1.0"
description = "Offline-first product analytics metrics API (FastAPI + DuckDB)"
readme = "README.md"
authors = [
    { name = "Shiki Ichitose", email = "149179099+ShikiIchitose@users.noreply.github.com" }
]
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "duckdb",
    "fastapi",
    "pydantic",
    "uvicorn",
    "pandas",
    "numpy",
]

# ---- dev deps (uv) ----
[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pyrefly",
  "pytest-socket",
  "httpx",
]

# ---- dev deps (pip extras) ----
[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pyrefly",
  "pytest-socket",
  "httpx",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "I001"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--disable-socket",
]

[tool.pyrefly]
project-includes = ["src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
search-path = ["src"]
